--- a/content/resume.tex
+++ b/content/resume.tex
@@ -25,12 +25,11 @@
 
 \hrule
 \vspace{-0.4em}
-\subsection*{About Me}
-I am a recent University of Waterloo graduate with a Software Engineering
-background. I have many interests spanning telecommunications, embedded systems,
-distributed systems and programming language design and implementation. I'm not
-afraid to take risks or make bold changes. I believe in creating well documented
-and well maintained software.  I secretly hate computers.
+\subsection*{Objective}
+Seeking a Software Engineering position involving backend systems. A strong
+preference is given for systems involving container management and compute
+cluster management. Further preference is given to positions that have
+mentorship.
 \\
 
 \hrule
@@ -39,12 +38,25 @@ and well maintained software.  I secretly hate computers.
   \begin{itemize}
     \parskip=-0.1em
 
+    % Twitter Promotion
+    \item[]
+    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Software Engineer II} \hfill \emph{September 2015 - Present}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Herp Derp.
+    \end{itemize}
+
+
     % Twitter FT
     \item[]
     {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
       \textbf{San Francisco, CA}}
     \\
-    {\emph{Software Engineer I} \hfill \emph{August 2014 - Present}}
+    {\emph{Software Engineer I} \hfill \emph{August 2014 - August 2015}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
@@ -85,95 +97,75 @@ and well maintained software.  I secretly hate computers.
     \end{itemize}
 
     % DISQUS
-    % \item[]
-    % {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
-    %   \textbf{San Francisco, CA}}
-    % \\
-    % {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
+    \item[]
+    {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
 
-    % \begin{itemize}[label=\textbullet]
-    %   \itemsep0em
-    %   \item Worked on performance measurement tools forming the basis for the
-    %         open source projects:
-    %         \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
-    %         and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
-    %   \item Worked on the infrastructure team to identify and remove performance
-    %         bottlenecks.
-    %   \item Independently audited the codebase to remove unused or inefficient
-    %         code.
-    %   \item Independently integrated code review and testing servers to test
-    %         patches before they were committed.
-    % \end{itemize}
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Worked on performance measurement tools forming the basis for the
+            open source projects:
+            \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
+            and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
+      \item Worked on the infrastructure team to identify and remove performance
+            bottlenecks.
+      \item Independently audited the codebase to remove unused or inefficient
+            code.
+      \item Independently integrated code review and testing servers to test
+            patches before they were committed.
+    \end{itemize}
 
 
     % TWG
-    % \item[]
-    % {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
-    %   \textbf{Toronto, ON}}
-    % \\
-    % {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+    \item[]
+    {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
+      \textbf{Toronto, ON}}
+    \\
+    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
 
-    % \begin{itemize}[label=\textbullet]
-    %   \itemsep0em
-    %   \item Worked on many Ruby on Rails projects.
-    %   \item Implemented features without assistance.
-    %   \item Worked with Backbone.js and CoffeeScript to enhance client-side
-    %   functionality.
-    % \end{itemize}
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Full stack work using Ruby on Rails and JavaScript projects for various
+        clients.
+    \end{itemize}
 
     % Xtreme
-    % \item[]
+    \item[]
+    {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
+      \textbf{Toronto, ON}}
+    \\
+    {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
 
-    % {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
-    %   \textbf{Toronto, ON}}
-    % \\
-    % {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
-
-    % \begin{itemize}[label=\textbullet]
-    %   \itemsep0em
-    %   \item Implemented and designed the initial version of
-    %         \href{http://www.blutrumpet.com/}{Blu Trumpet} using Ruby on Rails.
-    %   \item Wrote Ruby bindings to the OpenX ad delivery service.
-    %   \item Designed and implemented all of the user portal JavaScript
-    %   \item Integrated payment service with Braintree Payment Solutions
-    %   \item Designed metric calculations
-    % \end{itemize}
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Full stack work using Ruby on Rails and JavaScript for an OpenX
+        based mobile ad network.
+    \end{itemize}
 
     % Trapeze
-    % \item[]
-    % {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
-    %   \textbf{Mississauga, ON}}
-    % \\
-    % {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
+    \item[]
+    {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
+      \textbf{Mississauga, ON}}
+    \\
+    {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
 
-    % \begin{itemize}[label=\textbullet]
-    %   \itemsep0em
-    %   \item Created new web interface and search functionality for a product.
-    %   \item Designed and implemented new email templating functionality
-    %         requested by the client.
-    %   \item Completed over 50 feature requests.
-    %   \item Wrote a large number of tests for all modules worked with, which
-    %         then increased test coverage significantly.
-    % \end{itemize}
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Improved web interface, search functionality and email notifications
+        on bus dispatch application for major transportation agencies.
+    \end{itemize}
   \end{itemize}
 
 
-% \hrule
-% \vspace{-0.4em}
-% \subsection*{Technical Skills}
-% \begin{description}[labelindent=\parindent]
-%   \item[Languages:]
-%   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
-% \end{description}
-
+% TODO(zmanji): Revise this
 \hrule
 \vspace{-0.4em}
-\subsection*{Interests}
+\subsection*{Technical Skills}
 \begin{description}[labelindent=\parindent]
-  \item[Personal:]
-  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
-  \item[Technical:]
-  Functional Programming, Embedded Systems, Performance Programming
+  \item[Languages:]
+  Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
 \end{description}
 
 \hrule
@@ -190,15 +182,12 @@ and well maintained software.  I secretly hate computers.
       \emph{September 2009 - June 2014}}
 
     \begin{itemize}[label=\textbullet]
-      \item Selection of Academic Projects:
-      \begin{itemize}
-        \itemsep0em
-        \item Created a compiler for a subset of Java 1.3 that targeted the x86 architecture.
-        \item Submitted patches to the eCryptfs encrypted file system to support
-          integrity protecting cipher modes.
-        \item Worked in a group to design and implement an operating system on
-          a Cortex-M3 ARM processor.
-      \end{itemize}
+      \item Related Coursework: Compilers, Programming Languages, Operating
+        Systems, Networking, Distributed Systems.
+      \item Notable Work: Proposed patches to eCryptfs file system to support
+        integrity protecting cipher modes.
+      \item Notable Work: Created a compiler for a subset of Java 1.3 for the
+        x86 architecture.
     \end{itemize}
   \end{itemize}
 
