--- a/content/resume.tex
+++ b/content/resume.tex
@@ -8,6 +8,7 @@
 \usepackage{hyperref}
 \usepackage{tgpagella}
 \usepackage{enumitem}
+\usepackage{indentfirst}
 \pagestyle{empty}
 
 \begin{document}
@@ -24,19 +25,22 @@
 \end{center}
 
 \hrule
-\vspace{-0.4em}
-\subsection*{Objective}
-Seeking a Software Engineering position involving backend systems. A strong
-preference is given for systems involving container management and compute
-cluster management. Further preference is given to positions that have
-mentorship.
+\vspace{-1.0em}
+\subsection*{About Me}
+\indent I'm seeking a Software Engineering position involving backend systems. I give a
+preference to positions which leverage my background in cluster
+scheduling and container management with \href{aurora.apache.org}{Apache Aurora}
+and \href{mesos.apache.org}{Apache Mesos}.
+
+I'm passionate about immutable, reliable, automated infrastructure that scales
+with technical and organizational needs.
 \\
 
 \hrule
-\vspace{-0.4em}
+\vspace{-1.0em}
 \subsection*{Work Experience}
   \begin{itemize}
-    \parskip=-0.1em
+    \parskip=-0.5em
 
     % Twitter Promotion
     \item[]
@@ -47,7 +51,12 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Herp Derp.
+      \item Contributed to internal deploy system to allow users to deploy to
+        multiple \href{aurora.apache.org}{Apache Aurora} zones.
+      \item Independently worked on reducing technical debt on task specific
+        observability tooling.
+      \item Independently worked with many engineers at Twitter to improve
+        internal Python build hygiene.
     \end{itemize}
 
 
@@ -60,8 +69,12 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on the Cloud Infrastructure team on the
-        \href{aurora.incubator.apache.org}{Apache Aurora} scheduler for Apache Mesos.
+      \item Contributed usability fixes to the
+        \href{aurora.apache.org}{Apache Aurora} command line client.
+      \item Created an analytics pipeline to gain better understanding of
+        compute cluster utilization and allocation.
+      \item Worked with operators to increase overall reliability of compute
+        cluster.
     \end{itemize}
 
     % Twitter 2.0
@@ -73,12 +86,12 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on the Cloud Infrastructure team on the
-        \href{aurora.incubator.apache.org}{Apache Aurora} scheduler for Apache Mesos.
-      \item Modified the API to be versioned and return uniform responses.
-      \item Added penalties to scheduling short lived tasks.
-      \item Improved the preemptor to terminate low priority tasks in favor of
+      \item Improved \href{aurora.apache.org}{Apache Aurora}
+        preemption system to terminate multiple low priority tasks in favor of
         high priority tasks.
+      \item Improved \href{aurora.apache.org}{Apache Aurora}
+        scheduling algorithm to penalize short lived tasks to reduce wasted
+        scheduling attempts.
     \end{itemize}
 
     % Twitter
@@ -90,10 +103,10 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on the Analytics Infrastructure team to develop a stream
-        filtering system on top of Apache Kafka.
-      \item Used Scala and Java to dynamically introspect Thrift messages.
-      \item Independently took on additional work and responsibilities.
+      \item Designed and implemented a stream filtering system on top of Apache
+        Kafka to reduce stream size.
+      \item Created a DSL for operators to filter streams of arbitrary Thrift
+        messages.
     \end{itemize}
 
     % DISQUS
@@ -105,16 +118,14 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on performance measurement tools forming the basis for the
-            open source projects:
-            \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
-            and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
-      \item Worked on the infrastructure team to identify and remove performance
-            bottlenecks.
-      \item Independently audited the codebase to remove unused or inefficient
-            code.
-      \item Independently integrated code review and testing servers to test
-            patches before they were committed.
+      \item Worked on performance measurement tools to catch regressions before
+        systems were deployed.
+      % \item Worked on performance measurement tools forming the basis for the
+      %       open source projects:
+      %       \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
+      %       and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
+      % \item Independently integrated code review and testing servers to test
+      %       patches before they were committed.
     \end{itemize}
 
 
@@ -153,26 +164,26 @@ mentorship.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Improved web interface, search functionality and email notifications
-        on bus dispatch application for major transportation agencies.
+      \item Improved web interface and search functionality on bus dispatch
+        application for transportation agencies.
     \end{itemize}
   \end{itemize}
 
 
-% TODO(zmanji): Revise this
-\hrule
-\vspace{-0.4em}
-\subsection*{Technical Skills}
-\begin{description}[labelindent=\parindent]
-  \item[Languages:]
-  Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
-\end{description}
+% TODO(zmanji): Revise this. Turn it into a 'Keywords' section?
+% \hrule
+% \vspace{-0.4em}
+% \subsection*{Technical Skills}
+% \begin{description}[labelindent=\parindent]
+%   \item[Languages:]
+%   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
+% \end{description}
 
 \hrule
-\vspace{-0.4em}
+\vspace{-1.0em}
 \subsection*{Education}
   \begin{itemize}
-    \parskip=-0.1em
+    \parskip=-0.5em
 
     \item[]
     {\href{http://www.uwaterloo.ca}{\textbf{University of Waterloo}} \hfill
@@ -184,11 +195,20 @@ mentorship.
     \begin{itemize}[label=\textbullet]
       \item Related Coursework: Compilers, Programming Languages, Operating
         Systems, Networking, Distributed Systems.
-      \item Notable Work: Proposed patches to eCryptfs file system to support
-        integrity protecting cipher modes.
-      \item Notable Work: Created a compiler for a subset of Java 1.3 for the
-        x86 architecture.
+      \item Proposed patches to eCryptfs file system to support
+        integrity protecting cipher modes for design project.
+      \item Created a compiler for a subset of Java 1.3 for the
+        x86 architecture for compilers course.
     \end{itemize}
   \end{itemize}
+
+\hrule
+\vspace{-1.0em}
+\subsection*{Keywords}
+\begin{description}[labelindent=\parindent]
+  \parskip=-0.5em
+  \item[Languages:] Java, Python, Scala
+  \item[Systems:] Apache Aurora, Apache Mesos, Docker, Private Cloud
+\end{description}
 
 \end{document}
