--- a/content/resume.tex
+++ b/content/resume.tex
@@ -27,8 +27,8 @@
 \hrule
 \vspace{-1.0em}
 \subsection*{About Me}
-\indent I'm seeking a Software Engineering position involving backend systems. I give a
-preference to positions which leverage my background in cluster
+\indent I'm seeking a Software Engineering position involving backend systems. I
+give a preference to positions which leverage my background in cluster
 scheduling and container management with \href{aurora.apache.org}{Apache Aurora}
 and \href{mesos.apache.org}{Apache Mesos}.
 
