--- a/content/resume.tex
+++ b/content/resume.tex
@@ -27,12 +27,12 @@
 \hrule
 \vspace{-1.0em}
 \subsection*{About Me}
-\indent I'm seeking a Software Engineering position involving backend systems. I
+\noindent I'm seeking a Software Engineering position involving backend systems. I
 give a preference to positions which leverage my background in cluster
 scheduling and container management with \href{aurora.apache.org}{Apache Aurora}
 and \href{mesos.apache.org}{Apache Mesos}.
 
-I'm passionate about immutable, reliable, automated infrastructure that scales
+\noindent I'm passionate about immutable, reliable, automated infrastructure that scales
 with technical and organizational needs.
 \\
 
