--- a/content/resume.tex
+++ b/content/resume.tex
@@ -134,7 +134,7 @@ with technical and organizational needs.
     {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
       \textbf{Toronto, ON}}
     \\
-    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+    {\emph{Intern} \hfill \emph{September 2011 - December 2011}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
@@ -147,7 +147,7 @@ with technical and organizational needs.
     {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
       \textbf{Toronto, ON}}
     \\
-    {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
+    {\emph{Intern} \hfill \emph{January 2011 - April 2011}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
@@ -160,7 +160,7 @@ with technical and organizational needs.
     {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
       \textbf{Mississauga, ON}}
     \\
-    {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
+    {\emph{Intern} \hfill \emph{May 2010 - August 2010}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
