--- a/content/resume.tex
+++ b/content/resume.tex
@@ -27,13 +27,13 @@
 \hrule
 \vspace{-1.0em}
 \subsection*{About Me}
-\noindent I'm seeking a Software Engineering position involving backend systems. I
-give a preference to positions which leverage my background in cluster
+\noindent I'm seeking a Software Engineering position involving backend systems.
+I give a preference to positions which leverage my background in cluster
 scheduling and container management with \href{aurora.apache.org}{Apache Aurora}
 and \href{mesos.apache.org}{Apache Mesos}.
 
-\noindent I'm passionate about immutable, reliable, automated infrastructure that scales
-with technical and organizational needs.
+\noindent I'm passionate about immutable, reliable, automated infrastructure
+that scales with organizational needs.
 \\
 
 \hrule
@@ -72,7 +72,7 @@ with technical and organizational needs.
       \item Contributed usability fixes to the
         \href{aurora.apache.org}{Apache Aurora} command line client.
       \item Created an analytics pipeline to gain better understanding of
-        compute cluster utilization and allocation.
+        cluster utilization and allocation.
       \item Worked with operators to increase overall reliability of compute
         cluster.
     \end{itemize}
@@ -86,12 +86,10 @@ with technical and organizational needs.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Improved \href{aurora.apache.org}{Apache Aurora}
-        preemption system to terminate multiple low priority tasks in favor of
-        high priority tasks.
-      \item Improved \href{aurora.apache.org}{Apache Aurora}
-        scheduling algorithm to penalize short lived tasks to reduce wasted
-        scheduling attempts.
+      \item Improved Aurora preemption to terminate multiple low priority tasks
+        in favor of high priority tasks.
+      \item Improved scheduling algorithm to penalize short lived tasks to
+        reduce wasted scheduling attempts.
     \end{itemize}
 
     % Twitter
@@ -194,7 +192,7 @@ with technical and organizational needs.
 
     \begin{itemize}[label=\textbullet]
       \item Related Coursework: Compilers, Programming Languages, Operating
-        Systems, Networking, Distributed Systems.
+        Systems, Distributed Systems.
       \item Proposed patches to eCryptfs file system to support
         integrity protecting cipher modes for design project.
       \item Created a compiler for a subset of Java 1.3 for the
