--- a/content/resume.tex
+++ b/content/resume.tex
@@ -187,7 +187,7 @@ that scales with organizational needs.
     {\href{http://www.uwaterloo.ca}{\textbf{University of Waterloo}} \hfill
       \textbf{Waterloo, ON}}
     \\
-    {\emph{Bachelors of Software Engineering} \hfill
+    {\emph{Bachelor of Software Engineering} \hfill
       \emph{September 2009 - June 2014}}
 
     \begin{itemize}[label=\textbullet]
