--- a/content/resume.tex
+++ b/content/resume.tex
@@ -205,7 +205,8 @@ that scales with organizational needs.
 \subsection*{Keywords}
 \begin{description}[labelindent=\parindent]
   \parskip=-0.5em
-  \item[Languages:] Java, Python, Scala
+\item[Languages:] \textbf{Prefer:} Python, Scala \textbf{Have Used:} Java, Ruby,
+  C++, JavaScript, \textbf{Want To Use:} Rust
   \item[Systems:] Apache Aurora, Apache Mesos, Docker, Private Cloud
 \end{description}
 
