Remove duplicate lines.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -55,8 +55,8 @@ that scales with organizational needs.
         multiple \href{aurora.apache.org}{Apache Aurora} zones.
       \item Independently worked on reducing technical debt on task specific
         observability tooling.
-      \item Independently worked with many engineers at Twitter to improve
-        internal Python build hygiene.
+      \item Collaborated with many engineers at Twitter to improve internal
+        Python build hygiene.
     \end{itemize}
 
 
@@ -88,7 +88,7 @@ that scales with organizational needs.
       \itemsep0em
       \item Improved Aurora preemption to terminate multiple low priority tasks
         in favor of high priority tasks.
-      \item Improved scheduling algorithm to penalize short lived tasks to
+      \item Enhanced scheduling algorithm to penalize short lived tasks to
         reduce wasted scheduling attempts.
     \end{itemize}
 
