--- a/content/resume.tex
+++ b/content/resume.tex
@@ -14,27 +14,33 @@
 \begin{document}
 
 \begin{center}
-{\huge \textbf{Zameer Manji}}
+{\huge \textbf{Kalvin Lam}}
 
 % NOTE: Alternatively could have used \hfill
 
-\href{http://www.github.com/zmanji/}{www.github.com/zmanji}\ \ \textbullet
-\ \ \href{http://www.zameermanji.com}{http://www.zameermanji.com}\ \ \textbullet
-\ \ \href{malto:resume@zameermanji.com}{resume@zameermanji.com}
+\href{http://www.github.com/theklam/}{www.github.com/theklam}\ \ \textbullet
+\ \ \href{http://www.kalvinlam.com}{http://www.kalvinlam.com}\ \ \textbullet
+\ \ \href{malto:kalvin_lam@brown.edu}{kalvin\_lam@brown.edu}
 
 \end{center}
 
 \hrule
 \vspace{-1.0em}
-\subsection*{About Me}
-\noindent I'm seeking a Software Engineering position involving backend systems.
-I give a preference to positions which leverage my background in cluster
-scheduling and container management with \href{aurora.apache.org}{Apache Aurora}
-and \href{mesos.apache.org}{Apache Mesos}.
+\subsection*{Projects}
+  \begin{itemize}
+    \parskip=-0.5em
+ % HackNY
+    \item[]
+    {\href{http://www.twitter.com}{\textbf{ZooMass}} \hfill
+      \textbf{}}
+    \\
+    {\emph{Clarifai API, JavaScript} \hfill \emph{}}
 
-\noindent I'm passionate about immutable, reliable, automated infrastructure
-that scales with organizational needs.
-\\
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Utilizing the Clarifai API's deep learning algorithm to determine features of an animal
+    \end{itemize}
+\end{itemize}
 
 \hrule
 \vspace{-1.0em}
@@ -42,7 +48,7 @@ that scales with organizational needs.
   \begin{itemize}
     \parskip=-0.5em
 
-    % Twitter Promotion
+    % HackNY
     \item[]
     {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
       \textbf{San Francisco, CA}}
