newww resumeee first draft done

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -40,6 +40,29 @@
       \itemsep0em
       \item Utilizing the Clarifai API's deep learning algorithm to determine features of an animal
     \end{itemize}
+     \item[]
+    {\href{http://www.twitter.com}{\textbf{OnBoard}} \hfill
+      \textbf{}}
+    \\
+    {\emph{React.js, JavaScript} \hfill \emph{}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Virtual whiteboard bulletin board website, includes forum section,
+discussion board, pin item feature
+    \end{itemize}
+     \item[]
+    {\href{http://www.twitter.com}{\textbf{TrumpJump}} \hfill
+      \textbf{}}
+    \\
+    {\emph{Android} \hfill \emph{}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item FlappyBird-esque game with Trump as the bird, objective: keep Trump
+between two cacti
+    \end{itemize}
+    
 \end{itemize}
 
 \hrule
@@ -50,126 +73,84 @@
 
     % HackNY
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
-      \textbf{San Francisco, CA}}
+    {\href{http://www.twitter.com}{\textbf{HackNY}} \hfill
+      \textbf{New York City, NY}}
     \\
-    {\emph{Software Engineer II} \hfill \emph{September 2015 - Present}}
+    {\emph{Incoming Software Fellow} \hfill \emph{May 2018 - August 2018}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Contributed to internal deploy system to allow users to deploy to
-        multiple \href{aurora.apache.org}{Apache Aurora} zones.
-      \item Independently worked on reducing technical debt on task specific
-        observability tooling.
-      \item Collaborated with many engineers at Twitter to improve internal
-        Python build hygiene.
+      \item Will be paired with NYC startup as a software engineering intern
     \end{itemize}
 
 
-    % Twitter FT
+    % CS16 TA
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
-      \textbf{San Francisco, CA}}
+    {\href{http://www.twitter.com}{\textbf{Brown University}} \hfill
+      \textbf{Providence, RI}}
     \\
-    {\emph{Software Engineer I} \hfill \emph{August 2014 - August 2015}}
+    {\emph{Computer Science Teaching Assistant} \hfill \emph{December 2017 - May 2018}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Contributed usability fixes to the
-        \href{aurora.apache.org}{Apache Aurora} command line client.
-      \item Created an analytics pipeline to gain better understanding of
-        cluster utilization and allocation.
-      \item Worked with operators to increase overall reliability of compute
-        cluster.
+      \item Teaching assistant for CSCI0160: Algorithms and Data Structures taught by Professor Seny Kamara
     \end{itemize}
 
-    % Twitter 2.0
+    % Vietcetera
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
-      \textbf{San Francisco, CA}}
+    {\href{http://www.twitter.com}{\textbf{Vietcetera}} \hfill
+      \textbf{Ho Chi Minh City, Vietnam}}
     \\
-    {\emph{Intern} \hfill \emph{September 2013 - December 2013}}
+    {\emph{Content Analytics Intern} \hfill \emph{July 2017 - September 2017}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Improved Aurora preemption to terminate multiple low priority tasks
-        in favor of high priority tasks.
-      \item Enhanced scheduling algorithm to penalize short lived tasks to
-        reduce wasted scheduling attempts.
+      \item Interviewed emerging leaders in Vietnam's startup scene
+      \item Wrote articles about Vietnam's culture and history
+      \item Used Illustrator and Photoshop to design graphics
+      \item Used data from Google Analytics to make data-driven decisions
     \end{itemize}
 
-    % Twitter
+    % Juniper Networks
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
-      \textbf{San Francisco, CA}}
+    {\href{http://www.twitter.com}{\textbf{Juniper Networks}} \hfill
+      \textbf{Sunnyvale, CA}}
     \\
-    {\emph{Intern} \hfill \emph{January 2013 - April 2013}}
+    {\emph{Systems Support Engineering Intern} \hfill \emph{May 2016 - September 2016}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Designed and implemented a stream filtering system on top of Apache
-        Kafka to reduce stream size.
-      \item Created a DSL for operators to filter streams of arbitrary Thrift
-        messages.
+      \item Diagnosed and solved hardware/software issues for core Junos software engineering team
+      \item Built, reimaged, and set up laptops and desktops for new employees
+      \item Responded to requests for technical assistance in person, via phone
     \end{itemize}
 
-    % DISQUS
+    % Stanford Health
     \item[]
-    {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
-      \textbf{San Francisco, CA}}
+    {\href{http://www.disqus.com}{\textbf{Stanford Health}} \hfill
+      \textbf{San Jose, CA}}
     \\
-    {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
+    {\emph{Lead Research Intern} \hfill \emph{May 2015 - September 2015}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on performance measurement tools to catch regressions before
-        systems were deployed.
-      % \item Worked on performance measurement tools forming the basis for the
-      %       open source projects:
-      %       \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
-      %       and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
-      % \item Independently integrated code review and testing servers to test
-      %       patches before they were committed.
+      \item Researched causes of hepatitis B in local community
+      \item Presented to panel of Stanford medical students
+      \item Improved clinic website to include personal portal for each of the patients
     \end{itemize}
 
 
-    % TWG
+    % Top Writer
     \item[]
-    {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
-      \textbf{Toronto, ON}}
+    {\href{http://www.twg.ca}{\textbf{Business Insider, Quora}} \hfill
+      \textbf{Mountain View, CA}}
     \\
-    {\emph{Intern} \hfill \emph{September 2011 - December 2011}}
+    {\emph{Top Writer} \hfill \emph{January 2015 - July 2016}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Full stack work using Ruby on Rails and JavaScript projects for various
-        clients.
-    \end{itemize}
-
-    % Xtreme
-    \item[]
-    {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
-      \textbf{Toronto, ON}}
-    \\
-    {\emph{Intern} \hfill \emph{January 2011 - April 2011}}
-
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Full stack work using Ruby on Rails and JavaScript for an OpenX
-        based mobile ad network.
-    \end{itemize}
-
-    % Trapeze
-    \item[]
-    {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
-      \textbf{Mississauga, ON}}
-    \\
-    {\emph{Intern} \hfill \emph{May 2010 - August 2010}}
-
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Improved web interface and search functionality on bus dispatch
-        application for transportation agencies.
+      \item Business Insider Most Viewed Article in Technology, 750,000+ views
+      \item Quora Most Viewed Writer, over 3 million views
     \end{itemize}
   \end{itemize}
 
@@ -190,19 +171,14 @@
     \parskip=-0.5em
 
     \item[]
-    {\href{http://www.uwaterloo.ca}{\textbf{University of Waterloo}} \hfill
-      \textbf{Waterloo, ON}}
+    {\href{http://www.uwaterloo.ca}{\textbf{Brown University}} \hfill
+      \textbf{Providence, RI}}
     \\
-    {\emph{Bachelor of Software Engineering} \hfill
-      \emph{September 2009 - June 2014}}
+    {\emph{Bachelor of Science, GPA: 4.0/4.0} \hfill
+      \emph{September 2016 - May 2020}}
 
     \begin{itemize}[label=\textbullet]
-      \item Related Coursework: Compilers, Programming Languages, Operating
-        Systems, Distributed Systems.
-      \item Proposed patches to eCryptfs file system to support
-        integrity protecting cipher modes for design project.
-      \item Created a compiler for a subset of Java 1.3 for the
-        x86 architecture for compilers course.
+      \item Related Coursework: User Interfaces and User Design, Algorithms and Data Structures, Discrete Structures and Probability, Linear Algebra
     \end{itemize}
   \end{itemize}
 
@@ -211,9 +187,11 @@
 \subsection*{Keywords}
 \begin{description}[labelindent=\parindent]
   \parskip=-0.5em
-\item[Languages:] \textbf{Prefer:} Python, Scala \textbf{Have Used:} Java, Ruby,
-  C++, JavaScript, \textbf{Want To Use:} Rust
-  \item[Systems:] Apache Aurora, Apache Mesos, Docker, Private Cloud
+\item[Languages:] \textbf{Prefer:} Java, Python \textbf{Have Used:} Racket, Pyret,
+  HTML and CSS, JavaScript, \textbf{Want To Use:} Swift
+  \item[Human Languages:] Vietnamese, Spanish, Mandarin
+  \item[Design:] Adobe Photoshop, Adobe Illustrator
+  \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 10000 Subscribers, Student Body Vice President, Coke Scholar Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship
 \end{description}
 
 \end{document}
