pretty sick first draft of resume

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -122,7 +122,7 @@ between two cacti
       \itemsep0em
       \item Diagnosed and solved hardware/software issues for core Junos software engineering team
       \item Built, reimaged, and set up laptops and desktops for new employees
-      \item Responded to requests for technical assistance in person, via phone
+      \item Responded to requests for technical assistance internationally
     \end{itemize}
 
     % Stanford Health
@@ -137,6 +137,7 @@ between two cacti
       \item Researched causes of hepatitis B in local community
       \item Presented to panel of Stanford medical students
       \item Improved clinic website to include personal portal for each of the patients
+      \item Worked on user interface of mobile application
     \end{itemize}
 
 
