--- a/content/resume.tex
+++ b/content/resume.tex
@@ -18,8 +18,8 @@
 
 % NOTE: Alternatively could have used \hfill
 
-\href{http://www.github.com/theklam/}{www.github.com/theklam}\ \ \textbullet
-\ \ \href{http://www.kalvinlam.com}{http://www.kalvinlam.com}\ \ \textbullet
+\href{http://www.kalvinlam.com}{http://www.kalvinlam.com}\ \ \textbullet
+\ \ dreamin' big dreams\ \ \textbullet
 \ \ \href{malto:kalvin_lam@brown.edu}{kalvin\_lam@brown.edu}
 
 \end{center}
@@ -31,7 +31,7 @@
     \parskip=-0.5em
  % HackNY
     \item[]
-    {\href{http://www.twitter.com}{\textbf{ZooMass}} \hfill
+    {\textbf{ZooMass} \hfill
       \textbf{}}
     \\
     {\emph{Clarifai API, JavaScript} \hfill \emph{}}
@@ -41,7 +41,7 @@
       \item Utilizing the Clarifai API's deep learning algorithm to determine features of an animal
     \end{itemize}
      \item[]
-    {\href{http://www.twitter.com}{\textbf{OnBoard}} \hfill
+    {\textbf{OnBoard} \hfill
       \textbf{}}
     \\
     {\emph{React.js, JavaScript} \hfill \emph{}}
@@ -52,7 +52,7 @@
 discussion board, pin item feature
     \end{itemize}
      \item[]
-    {\href{http://www.twitter.com}{\textbf{TrumpJump}} \hfill
+    {\textbf{TrumpJump} \hfill
       \textbf{}}
     \\
     {\emph{Android} \hfill \emph{}}
@@ -73,7 +73,7 @@ between two cacti
 
     % HackNY
     \item[]
-    {\href{http://www.twitter.com}{\textbf{HackNY}} \hfill
+    {\href{https://apply.hackny.org/}{\textbf{HackNY}} \hfill
       \textbf{New York City, NY}}
     \\
     {\emph{Incoming Software Fellow} \hfill \emph{May 2018 - August 2018}}
@@ -86,7 +86,7 @@ between two cacti
 
     % CS16 TA
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Brown University}} \hfill
+    {\href{https://www.brown.edu/}{\textbf{Brown University}} \hfill
       \textbf{Providence, RI}}
     \\
     {\emph{Computer Science Teaching Assistant} \hfill \emph{December 2017 - May 2018}}
@@ -98,7 +98,7 @@ between two cacti
 
     % Vietcetera
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Vietcetera}} \hfill
+    {\href{http://vietcetera.com/}{\textbf{Vietcetera}} \hfill
       \textbf{Ho Chi Minh City, Vietnam}}
     \\
     {\emph{Content Analytics Intern} \hfill \emph{July 2017 - September 2017}}
@@ -113,7 +113,7 @@ between two cacti
 
     % Juniper Networks
     \item[]
-    {\href{http://www.twitter.com}{\textbf{Juniper Networks}} \hfill
+    {\href{https://www.juniper.net/us/en/}{\textbf{Juniper Networks}} \hfill
       \textbf{Sunnyvale, CA}}
     \\
     {\emph{Systems Support Engineering Intern} \hfill \emph{May 2016 - September 2016}}
@@ -127,7 +127,7 @@ between two cacti
 
     % Stanford Health
     \item[]
-    {\href{http://www.disqus.com}{\textbf{Stanford Health}} \hfill
+    {\href{https://stanfordhealthcare.org/}{\textbf{Stanford Health}} \hfill
       \textbf{San Jose, CA}}
     \\
     {\emph{Lead Research Intern} \hfill \emph{May 2015 - September 2015}}
@@ -143,7 +143,7 @@ between two cacti
 
     % Top Writer
     \item[]
-    {\href{http://www.twg.ca}{\textbf{Business Insider, Quora}} \hfill
+    {\href{http://www.businessinsider.com/}{\textbf{Business Insider, Quora}} \hfill
       \textbf{Mountain View, CA}}
     \\
     {\emph{Top Writer} \hfill \emph{January 2015 - July 2016}}
@@ -172,7 +172,7 @@ between two cacti
     \parskip=-0.5em
 
     \item[]
-    {\href{http://www.uwaterloo.ca}{\textbf{Brown University}} \hfill
+    {\href{https://www.brown.edu/}{\textbf{Brown University}} \hfill
       \textbf{Providence, RI}}
     \\
     {\emph{Bachelor of Science, GPA: 4.0/4.0} \hfill
