New version of resume for 88rising (updated with Babbel and new TA info)

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -71,16 +71,17 @@ between two cacti
   \begin{itemize}
     \parskip=-0.5em
 
-    % HackNY
+    % Babbel
     \item[]
-    {\href{https://apply.hackny.org/}{\textbf{HackNY}} \hfill
+    {\href{https://www.babbel.com/}{\textbf{Babbel}} \hfill
       \textbf{New York City, NY}}
     \\
-    {\emph{Incoming Software Fellow} \hfill \emph{May 2018 - August 2018}}
+    {\emph{Software Engineering Intern} \hfill \emph{May 2018 - August 2018}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Will be paired with NYC startup as a software engineering intern
+      \item Worked with design team and utilized React + Redux to build new landing pages for core website
+      \item Utilized Wordpress on the backend to fix major bugs affecting Babbel Magazine (5 million visitors/month)
     \end{itemize}
 
 
@@ -89,11 +90,12 @@ between two cacti
     {\href{https://www.brown.edu/}{\textbf{Brown University}} \hfill
       \textbf{Providence, RI}}
     \\
-    {\emph{Computer Science Teaching Assistant} \hfill \emph{December 2017 - May 2018}}
+    {\emph{Computer Science Teaching Assistant for CSCI0160: Algorithms and Data Structures} \hfill \emph{December 2017 - May 2018}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Teaching assistant for CSCI0160: Algorithms and Data Structures taught by Professor Seny Kamara
+      \item Led two weekly sections of ~8 students each
+      \item Designed and graded course assignments, held weekly TA hours
     \end{itemize}
 
     % Vietcetera
@@ -192,7 +194,7 @@ between two cacti
   HTML and CSS, JavaScript, \textbf{Want To Use:} Swift
   \item[Human Languages:] Vietnamese, Spanish, Mandarin
   \item[Design:] Adobe Photoshop, Adobe Illustrator
-  \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 10000 Subscribers, Student Body Vice President, Coke Scholar Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship
+  \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 10000 Subscribers, Student Body Vice President, Coca-Cola Scholars Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship, HackNY Fellow '18
 \end{description}
 
 \end{document}
