changes are in progress, adding cognitive toybox and overall thicc update so i can -> Chantal for Facebook stuff

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -52,15 +52,15 @@
 discussion board, pin item feature
     \end{itemize}
      \item[]
-    {\textbf{TrumpJump} \hfill
+    {\href{http://www.cognitivetoybox.com/}{\textbf{Cognitive Toybox}} \hfill
       \textbf{}}
     \\
-    {\emph{Android} \hfill \emph{}}
+    {\emph{React.js, Redux, JavaScript, AWS Amplify, AWS, Cognito} \hfill \emph{}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item FlappyBird-esque game with Trump as the bird, objective: keep Trump
-between two cacti
+      \item Built a mobile-friendly web portal from scratch for nonprofit organization that provides kindergarten readiness services 
+      \item 
     \end{itemize}
     
 \end{itemize}
@@ -94,7 +94,7 @@ between two cacti
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Led two weekly sections of ~8 students each
+      \item Led two weekly sections of 8 students each
       \item Designed and graded course assignments, held weekly TA hours
     \end{itemize}
 
@@ -137,7 +137,6 @@ between two cacti
     \begin{itemize}[label=\textbullet]
       \itemsep0em
       \item Researched causes of hepatitis B in local community
-      \item Presented to panel of Stanford medical students
       \item Improved clinic website to include personal portal for each of the patients
       \item Worked on user interface of mobile application
     \end{itemize}
@@ -190,8 +189,7 @@ between two cacti
 \subsection*{Keywords}
 \begin{description}[labelindent=\parindent]
   \parskip=-0.5em
-\item[Languages:] \textbf{Prefer:} Java, Python \textbf{Have Used:} Racket, Pyret,
-  HTML and CSS, JavaScript, \textbf{Want To Use:} Swift
+\item[Languages + Frameworks:] \textbf{Prefer:} Java, Python, React, Redux, HTML + CSS, JavaScript, Wordpress, AWS \textbf{Have Used:} Racket, Pyret 
   \item[Human Languages:] Vietnamese, Spanish, Mandarin
   \item[Design:] Adobe Photoshop, Adobe Illustrator
   \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 10000 Subscribers, Student Body Vice President, Coca-Cola Scholars Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship, HackNY Fellow '18
