hella more changes (still not ready to send to chantal for FB yet)

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -55,12 +55,13 @@ discussion board, pin item feature
     {\href{http://www.cognitivetoybox.com/}{\textbf{Cognitive Toybox}} \hfill
       \textbf{}}
     \\
-    {\emph{React.js, Redux, JavaScript, AWS Amplify, AWS, Cognito} \hfill \emph{}}
+    {\emph{React.js, Redux, JavaScript, AWS Amplify, AWS, Cognito, Rest APIs} \hfill \emph{}}
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Built a mobile-friendly web portal from scratch for nonprofit organization that provides kindergarten readiness services 
-      \item 
+      \item Built a mobile-friendly web portal from scratch for a nonprofit organization that provides kindergarten readiness services 
+      \item Built out authentication features using AWS Amplify
+      \item Communicated with backend (REST API) to retrieve data and display on frontend
     \end{itemize}
     
 \end{itemize}
@@ -107,10 +108,8 @@ discussion board, pin item feature
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Interviewed emerging leaders in Vietnam's startup scene
-      \item Wrote articles about Vietnam's culture and history
-      \item Used Illustrator and Photoshop to design graphics
-      \item Used data from Google Analytics to make data-driven decisions
+      \item Interviewed emerging leaders in Vietnam's startup scene + wrote articles about Vietnam's culture 
+      \item Used Illustrator + Photoshop to design graphics + data from Google Analytics to make informed decisions
     \end{itemize}
 
     % Juniper Networks
@@ -136,9 +135,7 @@ discussion board, pin item feature
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Researched causes of hepatitis B in local community
-      \item Improved clinic website to include personal portal for each of the patients
-      \item Worked on user interface of mobile application
+      \item Improved clinic site to include personal portal for patients + worked on UI of mobile application
     \end{itemize}
 
 
@@ -180,7 +177,7 @@ discussion board, pin item feature
       \emph{September 2016 - May 2020}}
 
     \begin{itemize}[label=\textbullet]
-      \item Related Coursework: User Interfaces and User Design, Algorithms and Data Structures, Discrete Structures and Probability, Linear Algebra
+      \item Related Coursework: User Interfaces and User Design, Algorithms and Data Structures, Discrete Structures and Probability, Linear Algebra, Statistical Inference
     \end{itemize}
   \end{itemize}
 
@@ -189,10 +186,10 @@ discussion board, pin item feature
 \subsection*{Keywords}
 \begin{description}[labelindent=\parindent]
   \parskip=-0.5em
-\item[Languages + Frameworks:] \textbf{Prefer:} Java, Python, React, Redux, HTML + CSS, JavaScript, Wordpress, AWS \textbf{Have Used:} Racket, Pyret 
+\item[Languages + Frameworks + Libraries:] \textbf{Prefer:} Java, Python, React, Redux, HTML + CSS, JavaScript, Wordpress, AWS, Rest APIs, Webpack, Travis CI, Jekyll, Sass, Vagrant, Bash, React Router, React Redux \textbf{Have Used:} Racket, Pyret, PHP, PHPUnit
   \item[Human Languages:] Vietnamese, Spanish, Mandarin
   \item[Design:] Adobe Photoshop, Adobe Illustrator
-  \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 10000 Subscribers, Student Body Vice President, Coca-Cola Scholars Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship, HackNY Fellow '18
+  \item[Accomplishments:] Eagle Scout, National AP Scholar, YouTube 15000 Subscribers, Student Body Vice President, Coca-Cola Scholars Regional Finalist, USA Computing Olympiad Silver Division, Juniper Networks Engineering Scholarship, HackNY Fellow '18, Brown VSA Co-President
 \end{description}
 
 \end{document}
