good to go to FB

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -59,7 +59,7 @@ discussion board, pin item feature
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Built a mobile-friendly web portal from scratch for a nonprofit organization that provides kindergarten readiness services 
+      \item Built a mobile + web portal from scratch for an organization that provides kindergarten readiness services 
       \item Built out authentication features using AWS Amplify
       \item Communicated with backend (REST API) to retrieve data and display on frontend
     \end{itemize}
@@ -109,7 +109,8 @@ discussion board, pin item feature
     \begin{itemize}[label=\textbullet]
       \itemsep0em
       \item Interviewed emerging leaders in Vietnam's startup scene + wrote articles about Vietnam's culture 
-      \item Used Illustrator + Photoshop to design graphics + data from Google Analytics to make informed decisions
+      \item Used Illustrator + Photoshop to design graphics for the core website
+      \item Parsed data from Google Analytics to make informed decisions + run AB tests
     \end{itemize}
 
     % Juniper Networks
@@ -149,7 +150,7 @@ discussion board, pin item feature
     \begin{itemize}[label=\textbullet]
       \itemsep0em
       \item Business Insider Most Viewed Article in Technology, 750,000+ views
-      \item Quora Most Viewed Writer, over 3 million views
+      \item Quora Most Viewed Writer, over 3 million views, 300+ articles written
     \end{itemize}
   \end{itemize}
 
